# Garagem

./: db.sqlite3  pyproject.toml  requirements.txt
core/: admin.py  models.py  serializers.py  views.py
core/migrations/: 0001_initial.py  0002_alter_categoria_descricao_carro.py
garagem/: settings.py  urls.py
